--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@expo/vector-icons": "^13.0.0",
     "@react-navigation/bottom-tabs": "^6.5.3",
     "@react-navigation/native": "^6.1.2",
+    "@react-navigation/native-stack": "^6.9.8",
     "@ui-kitten/components": "^5.1.2",
     "@ui-kitten/eva-icons": "^5.1.2",
     "expo": "~47.0.12",
@@ -21,6 +22,7 @@
     "react-native": "0.70.5",
     "react-native-base": "^1.1.0",
     "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "^3.19.0",
     "react-native-svg": "13.4.0"
   },
   "devDependencies": {
