--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-base": "^1.1.0",
+    "react-native-image-slider-banner": "^1.0.3",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "^3.19.0",
     "react-native-svg": "13.4.0"
