--- a/app.json
+++ b/app.json
@@ -35,6 +35,6 @@
         "projectId": "21754078-7dee-4b9e-9351-215f787241f8"
       }
     },
-    "owner": "anvkup"
+    "owner": "vishal-1230"
   }
 }
