--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "user_app",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -20,10 +19,12 @@
     "@ui-kitten/eva-icons": "^5.1.2",
     "axios": "^1.2.3",
     "expo": "~47.0.12",
+    "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-async-storage": "^0.0.1",
     "react-native-base": "^1.1.0",
     "react-native-dialog": "^9.3.0",
     "react-native-image-slider-banner": "^1.0.3",
