--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.2.3",
     "eas-cli": "^3.4.1",
     "expo": "~47.0.12",
+    "expo-dev-client": "^2.0.1",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
