--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-prompt-android": "^1.1.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
+    "react-native-step-indicator": "^1.0.3",
     "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.9"
   },
