--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-dev-client": "^2.0.1",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
+    "lottie-ios": "3.2.3",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
@@ -30,6 +31,7 @@
     "react-native-base": "^1.1.0",
     "react-native-dialog": "^9.3.0",
     "react-native-image-slider-banner": "^1.0.3",
+    "react-native-lottie-splash-screen": "^1.1.1",
     "react-native-prompt-android": "^1.1.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
