--- a/app.json
+++ b/app.json
@@ -23,16 +23,16 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
       },
-      "package": "com.vishal1230.vegiesuserapp"
+      "package": "com.anvkup.vegiesuserapp"
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
+    "owner": "anvkup",
     "extra": {
       "eas": {
-        "projectId": "266750fa-3731-4231-8a48-cd7beaed5126"
+        "projectId": "66ed1ff8-0a73-4ddd-b517-530ce65029ab"
       }
-    },
-    "owner": "vishal-1230"
+    }
   }
 }
