--- a/app.json
+++ b/app.json
@@ -20,7 +20,7 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/cartoutLogo.png",
         "backgroundColor": "#FFFFFF"
       },
       "package": "com.anvkup.vegiesuserapp"
