--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "user_app",
   "version": "1.0.0",
   "scripts": {
-    "start": "npx expo start",
+    "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web"
@@ -23,7 +23,7 @@
     "expo-dev-client": "^2.0.1",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
-    "react": "^18.1.0",
+    "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-async-storage": "^0.0.1",
